[package]
name = "steganography"
version = "2.0.0"
authors = ["Brandon Poole <brandoncpoole@gmail.com>"]
edition = "2018"
description = "A simple steganography library"
repository = "https://github.com/Bcpoole/steganography"
readme = "README.md"
keywords = ["steganography", "image"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.0"
