[package]
name = "trithemius"
version = "2.0.1"
authors = ["Brandon Poole <brandoncpoole@gmail.com>"]
edition = "2018"
description = "A simple steganography library"
repository = "https://github.com/Bcpoole/https://github.com/Bcpoole/trithemius"
readme = "README.md"
keywords = ["steganography", "png", "hidden"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
